<resources>
    <string name="app_name">Space Engineers Data</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="nav_image">Nav Drawer Image</string>
    <string name="title_about">About Title</string>
    <string name="about_ok">OK</string>
    <string name="about_body">About Body</string>
    <string name="demo_trademark">Google, Google Play and the Google Maps logo are registered trademarks of Google Inc.</string>
    <string name="trademark">&#8482;</string>
    <string name="action_menu_about">About</string>
    <string name="action_menu_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_menu_beer">Donate</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_reset_list">Reset list</string>
    <string name="menu_share">Share</string>
    <string name="menu_discard">Discard</string>
    <string name="hello_world">Hello world!</string>
    <string name="carddemo_title_header">Card Header</string>
    <string name="carddemo_title_shadow">Card Shadow</string>
    <string name="carddemo_title_thumbnail">Card Thumbnail</string>
    <string name="carddemo_title_card">Card</string>
    <string name="carddemo_title_card_expand">Card Expand</string>
    <string name="carddemo_title_gplay">Google Play &#8482;</string>
    <string name="carddemo_title_gnow">Google Now</string>
    <string name="carddemo_title_gplus">Misc</string>
    <string name="carddemo_title_birthday_card">BirthDay Card</string>
    <string name="carddemo_title_stock_card">Google Now Stock</string>
    <string name="carddemo_title_play_card">Google Play &#8482;</string>
    <string name="carddemo_title_misc_card">Misc</string>
    <string name="carddemo_title_card_changevalue">Refresh card</string>
    <string name="carddemo_title_list_base">List Base</string>
    <string name="carddemo_title_list_base_different_inner">List base with different Inner Layouts</string>
    <string name="carddemo_title_list_expand">List with expandable card</string>
    <string name="carddemo_title_list_gplaycard">List Google Play &#8482;</string>
    <string name="carddemo_title_grid_base">Grid Base</string>
    <string name="carddemo_title_grid_gplay">Grid Google Play &#8482;</string>
    <string name="carddemo_title_list_gplaycard_undo">List with undo</string>
    <string name="carddemo_title_list_color">Colored cards</string>
    <string name="carddemo_title_list_cursor">List with Cursor</string>
    <string name="carddemo_title_grid_cursor">Grid with Cursor</string>
    <string name="carddemo_title_cab_list">List with MultiChoice</string>
    <string name="carddemo_title_grid_gplay_cab">Grid with MultiChoice</string>
    <string name="carddemo_title_cab_list_cursor">List with Cursor and MultiChoice</string>
    <string name="carddemo_title_dismiss_animation">Dismiss Animation (experimental)</string>
    <string name="carddemo_title_expandablelistcard">ExpandableListCard</string>
    <string name="carddemo_title_carwithlist_card">Card with List</string>
    <string name="carddemo_title_overflow_animation">Overflow animation (experimental)</string>
    <string name="carddemo_title_sectioned_list">Sectioned List</string>
    <string name="carddemo_title_native_card">Native Card</string>
    <string name="carddemo_title_tag_base_header">Header</string>
    <string name="carddemo_title_tag_base_shadow">Shadow</string>
    <string name="carddemo_title_tag_base_thumbnail">Thumbnail</string>
    <string name="carddemo_title_tag_base_card">Card</string>
    <string name="carddemo_title_tag_base_card_expand">Expand</string>
    <string name="carddemo_title_tag_ex_gplay">Google Play &#8482;</string>
    <string name="carddemo_title_tag_ex_gnow">Google Now &#8482;</string>
    <string name="carddemo_title_tag_ex_material">Material Card</string>
    <string name="carddemo_title_tag_ex_birthday_card">BirthDay Card</string>
    <string name="carddemo_title_tag_ex_stock_card">Google Now Stock &#8482;</string>
    <string name="carddemo_title_tag_ex_play_card">Google Play &#8482;</string>
    <string name="carddemo_title_tag_ex_misc_card">Misc</string>
    <string name="carddemo_title_tag_ex_card_changevalue">Refresh card</string>
    <string name="carddemo_title_tag_ex_topcolored">Top Colored Card</string>
    <string name="carddemo_title_tag_list_base">List base</string>
    <string name="carddemo_title_tag_list_base_different_layout">Different layouts</string>
    <string name="carddemo_title_tag_list_expandable_card">Expandable cards</string>
    <string name="carddemo_title_tag_list_google_play">Google Play &#8482;</string>
    <string name="carddemo_title_tag_list_swipe_undo">Swipe and undo</string>
    <string name="carddemo_title_tag_list_grid_base">Grid base</string>
    <string name="carddemo_title_tag_list_grid_google_play">Grid Google Play &#8482;</string>
    <string name="carddemo_title_tag_list_colored">Colored cards</string>
    <string name="carddemo_title_tag_list_cursor">List and Cursor</string>
    <string name="carddemo_title_tag_list_grid_cursor">Grid with Cursor</string>
    <string name="carddemo_title_tag_list_recyclerView">Recycler View</string>
    <string name="carddemo_title_tag_cab_multichoice">Multichoice</string>
    <string name="carddemo_title_tag_cab_grid_multichoice">Grid with CAB</string>
    <string name="carddemo_title_tag_cab_cursor_multichoice">CAB and Cursor</string>
    <string name="carddemo_title_tag_misc_cardwithlist">Card with List</string>
    <string name="carddemo_title_tag_misc_sectioned">Sectioned List</string>
    <string name="carddemo_title_tag_misc_dismiss">Dimiss Animation</string>
    <string name="carddemo_title_tag_misc_overflow_animation">Overflow Animation</string>
    <string name="carddemo_title_tag_todo">Todo</string>
    <string name="demo_section_header_standard">Standard Header without buttons</string>
    <string name="demo_section_header_overflow">Standard Header with overflow button</string>
    <string name="demo_section_header_overflow_dynamic">Overflow button with dynamic menu</string>
    <string name="demo_section_header_overflow_dynamic2">Overflow button with dynamic menu without xml file</string>
    <string name="demo_section_header_expand">Standard Header with expand/collapse button</string>
    <string name="demo_section_header_expand_custom_area">Standard Header with expand/collapse button and custom expand Area</string>
    <string name="demo_section_header_otherButton">Standard Header with custom button</string>
    <string name="demo_section_header_otherButton_programmatically">Standard Header with custom button programmatically</string>
    <string name="demo_section_header_inner">Customize the innerContent Header Layout</string>
    <string name="demo_section_header_layout">Customizing the HeaderLayout</string>
    <string name="demo_section_header_buttonleft_layout">Header with button on the left</string>
    <string name="demo_section_shadow_no">Card without shadow</string>
    <string name="demo_section_shadow_customizing">Customizing shadow</string>
    <string name="demo_section_shadow_layout">Customizing the ShadowLayout</string>
    <string name="demo_section_shadow_elevation">Change the elevation</string>
    <string name="demo_section_shadow_animation">Animation</string>
    <string name="demo_section_thumb_id">Thumbnail from resource ID</string>
    <string name="demo_section_thumb_url">Thumbnail from resource URL</string>
    <string name="demo_section_thumb_style">Styling your Thumbnail card</string>
    <string name="demo_section_thumb_customsource">Thumbnail from custom source</string>
    <string name="demo_section_card_title">Card with simple title</string>
    <string name="demo_section_card_inner">Card with custom inner layout</string>
    <string name="demo_section_card_example">Extending card</string>
    <string name="demo_section_card_example_swipe">Custom card with swipe</string>
    <string name="demo_section_card_example_clickable">Custom card clickable</string>
    <string name="demo_section_card_example_expand">Card with expand/collapse action</string>
    <string name="demo_section_card_example_partial_listeners">Custom card with partial areas clickable</string>
    <string name="demo_section_card_example_cab">Contextual action mode</string>
    <string name="demo_section_card_expand_example1">Expand clicking on the button</string>
    <string name="demo_section_card_expand_example2">Expand clicking on the card</string>
    <string name="demo_section_card_expand_example3">Expand clicking on the text</string>
    <string name="demo_section_card_expand_example4">Expand clicking on the image</string>
    <string name="demo_section_card_expand_example5">Expand section inside the card</string>
    <string name="demo_section_card_expand_example6">Expand the card in programmatic way</string>
    <string name="demo_section_card_expand_example6_text">Click here to expand/collapse the card</string>
    <string name="demo_section_card_changevalue_title">Click Refresh Icon to refresh card</string>
    <string name="demo_section_material_large_image_text">Material Card with Large Image and Text</string>
    <string name="demo_section_material_large_image">Material Card with Large Image and supplemental actions</string>
    <string name="demo_section_material_progress_card">Progress Card</string>
    <string name="demo_section_material_halfcolored">Top Colored Card</string>
    <string name="demo_header_basetitle">Card Header Title</string>
    <string name="demo_expand_basetitle">Card Expand Title</string>
    <string name="demo_header_exampletitle1">This is my inner layout title</string>
    <string name="demo_header_exampletitle2">Short subtitle example</string>
    <string name="demo_header_example1_text">Suggested communities</string>
    <string name="demo_expand_customtitle1">Lorem ipsum dolor sit amet, consectetur adipisici elit…</string>
    <string name="demo_expand_customtitle2">Quis aute iure reprehenderit in voluptate velit esse cillum ..</string>
    <string name="demo_expand_customtitle3">Lorem ipsum dolor sit amet, consectetur adipisici elit…Lorem ipsum dolor sit amet, consectetur adipisici elit…Lorem ipsum dolor sit amet, consectetur adipisici elit…Lorem ipsum dolor sit amet, consectetur adipisici elit…</string>
    <string name="demo_header_expand_area_inside">Card with expand area inside</string>
    <string name="demo_card_basetitle">My Inner Text</string>
    <string name="demo_custom_card_google_maps">Google Maps &#8482;</string>
    <string name="rd_repeat">Repeat</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_event">event</string>
</resources>