<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ *******************************************************************************
  ~   Copyright (c) 2013-2014 Gabriele Mariotti.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~  *****************************************************************************
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/card_scrollview"
        style="@style/carddemo_default_container_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Simple Title -->
            <TextView
                style="@style/Theme.Carddemo.TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_title"/>

            <chickennugget.spaceengineersdata.cards.CardViewNative
                android:id="@+id/carddemo_card_id"
                style="@style/card_external"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <!-- Card with custom inner layout -->
            <TextView
                style="@style/Theme.Carddemo.TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_inner"/>

            <chickennugget.spaceengineersdata.cards.CardViewNative
                android:id="@+id/carddemo_card_inner"
                style="@style/card_external"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Extending card -->
            <TextView
                style="@style/Theme.Carddemo.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_example"/>

            <chickennugget.spaceengineersdata.cards.CardViewNative
                android:id="@+id/carddemo_example_card3"
                style="@style/card_external"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Swipe listener -->
            <TextView
                android:id="@+id/carddemo_card3_text"
                style="@style/Theme.Carddemo.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_example_swipe"/>

            <chickennugget.spaceengineersdata.cards.CardViewNative
                android:id="@+id/carddemo_example_card3_swipe"
                style="@style/card_external"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Clickable card -->
            <TextView
                style="@style/Theme.Carddemo.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_example_clickable"/>

            <chickennugget.spaceengineersdata.cards.CardViewNative
                android:id="@+id/carddemo_example_card3_clickable"
                style="@style/card_external"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Partial clickable -->
            <TextView
                style="@style/Theme.Carddemo.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_example_partial_listeners"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <chickennugget.spaceengineersdata.cards.CardViewNative
                    android:id="@+id/carddemo_example_card3_listeners1"
                    style="@style/card_external"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

                <chickennugget.spaceengineersdata.cards.CardViewNative
                    android:id="@+id/carddemo_example_card3_listeners2"
                    style="@style/card_external"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <!-- CAB card -->
            <TextView
                style="@style/Theme.Carddemo.TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_section_card_example_cab"/>

            <chickennugget.spaceengineersdata.cards.CardViewNative
                android:id="@+id/carddemo_example_card_cab"
                style="@style/card_external"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Empty view-->
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>