<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/rd_fl_mode"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <chickennugget.spaceengineersdata.material.widget.Spinner
            android:id="@+id/rd_spn_mode"
            style="@style/Material.Widget.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:minWidth="72dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"
            app:spn_arrowColor="#FFFFFFFF"
            app:spn_dividerHeight="0dp"
            app:spn_label="@string/rd_repeat"
            app:spn_labelEnable="true"
            app:spn_labelTextColor="#FFFFFFFF"/>

    </FrameLayout>

    <ScrollView
        android:id="@+id/rd_sv_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:id="@+id/rd_ll_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <chickennugget.spaceengineersdata.material.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_every"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/abc_primary_text_material_light"/>

                <chickennugget.spaceengineersdata.material.widget.EditText
                    android:id="@+id/rd_et_period"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    app:et_inputId="@+id/rd_et_period_input"
                    app:et_labelEnable="false"
                    tools:text="1"/>

                <chickennugget.spaceengineersdata.material.widget.TextView
                    android:id="@+id/rd_tv_period_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/abc_primary_text_material_light"
                    tools:text="@string/rd_day"/>

            </LinearLayout>

            <chickennugget.spaceengineersdata.material.app.WeekView
                android:id="@+id/rd_wv_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@drawable/color_wv_text"
                app:wv_animDuration="@android:integer/config_mediumAnimTime"
                app:wv_horizontalPadding="8dp"
                app:wv_verticalPadding="8dp"/>

            <chickennugget.spaceengineersdata.material.widget.RadioButton
                android:id="@+id/rd_month_rb_same"
                style="@style/Material.Drawable.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:gravity="center_vertical"
                android:text="@string/rd_month_same_day"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/abc_primary_text_material_light"
                android:textDirection="locale"/>

            <chickennugget.spaceengineersdata.material.widget.RadioButton
                android:id="@+id/rd_month_rb_week"
                style="@style/Material.Drawable.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/abc_primary_text_material_light"
                android:textDirection="locale"
                tools:text="@string/rd_month_last"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-8dp"
                android:layout_marginStart="-8dp"
                android:paddingTop="8dp">

                <chickennugget.spaceengineersdata.material.widget.Spinner
                    android:id="@+id/rd_spn_end"
                    style="@style/Material.Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    app:rd_style="@style/Material.Drawable.Ripple.Wave.Light"/>

                <chickennugget.spaceengineersdata.material.widget.EditText
                    android:id="@+id/rd_et_end_num"
                    style="@style/Material.Widget.EditText.Light"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/rd_spn_end"
                    android:layout_toRightOf="@id/rd_spn_end"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    app:et_inputId="@+id/rd_et_end_num_input"
                    app:et_labelEnable="false"
                    tools:text="1"/>

                <chickennugget.spaceengineersdata.material.widget.TextView
                    android:id="@+id/rd_tv_end_num_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/rd_et_end_num"
                    android:layout_toRightOf="@id/rd_et_end_num"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/abc_primary_text_material_light"
                    tools:text="@string/rd_event"/>

                <chickennugget.spaceengineersdata.material.widget.Button
                    android:id="@+id/rd_bt_end_date"
                    style="@style/Material.Drawable.Ripple.Wave.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/rd_spn_end"
                    android:layout_toRightOf="@id/rd_spn_end"
                    android:background="@null"
                    android:ellipsize="end"
                    android:padding="8dp"
                    android:singleLine="true"
                    tools:text="12/01/2015"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
